--- a/LESS/about.less
+++ b/LESS/about.less
@@ -1,7 +1,13 @@
 .about {
 
     .position-element(@width: 95%, @margin: @zero);
-
+    h1{
+        width: 100%;
+        padding: 1rem;
+        text-align: center;
+        font-size: 2rem;
+        font-style: bold;
+    }
     .dev-info {
         display: flex;
 
@@ -25,7 +31,8 @@
         }
 
         .dev-text {
-            font-size: 1.3rem;
+            padding: 8rem;
+            font-size: 1.6rem;
             order    : 1;
         }
     }
